--- a/class/style.css
+++ b/class/style.css
@@ -66,21 +66,80 @@ div {
   width: 100px;
   height: 100px;
   background-color: brown;
+  position: relative;
   animation-name: colorchange;
-  animation-duration: 4s;
+  /* animation-duration: 4s; */
+  /* animation-delay: 2s; */
+  /* animation-delay: -2s; */
+  /* animation-iteration-count: 2; */
+
+  /* animation-iteration-count: infinite; */
+
+  /* animation-direction: reverse; */
+  /* animation-direction: alternate; */
+  /* animation-direction: alternate-reverse; */
+  animation: colorchange 4s 2;
 }
-div:hover {
-  animation-name: colorchange;
-  animation-duration: 4s;
+
+/* div:hover {
+   animation-name: colorchange;
+  animation-duration: 4s; 
+} */
+#div1 {
+  animation-timing-function: linear;
+}
+#div2 {
+  animation-timing-function: ease;
+}
+#div3 {
+  animation-timing-function: ease-in;
+}
+#div4 {
+  animation-timing-function: ease-out;
+}
+#div5 {
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes colorchange {
   from {
+    left: 0px;
+  }
+  to {
+    left: 300px;
+  }
+  /* from {
     background-color: red;
   }
   to {
     background-color: blue;
+  } */
+  /* 0% - 100% */
+  /* 0% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
   }
+  25% {
+    background-color: yellow;
+    left: 300px;
+    top: 0px;
+  }
+  50% {
+    background-color: blue;
+    left: 300px;
+    top: 300px;
+  }
+  75% {
+    background-color: blueviolet;
+    left: 0px;
+    top: 300px;
+  }
+  100% {
+    background-color: green;
+    left: 0px;
+    top: 0px;
+  } */
 }
 
 /* div {
@@ -262,3 +321,4 @@ h1::before {
   grid-row-end /
   grid-column-end 
   */
+/* linear gradient */
